# awesome-x402-on-base

./: .gitignore  .gitmodules  README.md  ROADMAP.md
docs/korean/: getting_started.ko.md
examples/: README.ko.md  README.md
examples/python/streamer-donation/: PRD.ko.md  README.ko.md  README.md
examples/python/streamer-donation/backend/: .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  Makefile  README.md  pyproject.toml
examples/python/streamer-donation/backend/app/: __init__.py  main.py  mock_data.py
examples/python/streamer-donation/backend/app/core/: __init__.py  config.py  database.py  dependencies.py
examples/python/streamer-donation/backend/app/models/: __init__.py  dtos.py  schemas.py
examples/python/streamer-donation/backend/app/repositories/: donation_repository.py  streamer_repository.py
examples/python/streamer-donation/backend/app/routes/: __init__.py  donations.py  pages.py  streamers.py
examples/python/streamer-donation/backend/app/services/: __init__.py  donation_service.py  streamer_service.py  validation_service.py
examples/python/streamer-donation/backend/tests/: __init__.py  conftest.py  test_database.py  test_models.py  test_repositories.py  test_routes.py  test_services.py
examples/python/streamer-donation/backend/user_flows/: README.ko.md  README.md  donation_flow_example.py
