[project]
name = "streamer-donation-system"
version = "0.1.0"
description = "x402-powered donation platform for streamers on Base blockchain"
authors = [
    {name = "Logan Kang", email = "kcs93023@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.0",
    "x402>=0.1.0",
    "web3>=6.0.0",
    "rocksdict>=0.3.0",  # Python 3.12 compatible RocksDB binding
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "bleach>=6.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "basedpyright>=1.18.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
    "RUF", # Ruff-specific rules
]
ignore = [
    "S101",    # Use of assert in tests
    "S104",    # Possible binding to all interfaces (0.0.0.0 for dev server)
    "S106",    # Possible hardcoded password (test fixtures)
    "B008",    # Do not perform function call in argument defaults (FastAPI Depends)
    "B017",    # Do not assert blind exception: Exception
    "B904",    # Within except clause, raise with from (FastAPI pattern)
    "RUF012",  # Mutable class attributes (Pydantic Config pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=app --cov-report=html --cov-report=term-missing"

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportMissingParameterType = "error"
reportUnnecessaryTypeIgnoreComment = "warning"
reportImplicitRelativeImport = false
reportUnusedCallResult = false
reportAny = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert warnings in tests
